# py-congress

./: README.md  pyproject.toml
docs/: index.md
py_congress/: __init__.py  bill.py  client.py  config.py
py_congress/models/: __init__.py  bill.py  common.py
src/py_congress/: bill.py  client.py
src/py_congress/models/: bill.py  config.py
tests/: test_bill_client.py
