[tool.poetry]
name = "py-congress"
version = "0.1.0"
description = "A client library to interact with the Congress.gov API."
authors = ["abefleming"]
license = "GNU GPLv3"
readme = "README.md"
packages = [{include = "py_congress"}]


[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.1.1"
requests = "^2.31.0"
ruff = "^0.0.284"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.284"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
